# OrbitalEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Clear.bat  MakeShader.sh  MakeSolution.bat  Orbital.sln  readme.MD
OrbitalEditor/: CMakeLists.txt  copy_assets.cmake  imgui.ini
OrbitalEditor/OrbitalEditor.dir/RelWithDebInfo/: OrbitalEditor.exe.recipe
OrbitalEditor/OrbitalEditorNV.dir/RelWithDebInfo/: OrbitalEditorNV.exe.recipe
OrbitalEditor/assets/: Base.glsl.frag  Base.glsl.vert
OrbitalEditor/assets/assets/textures/: icons.xcf
OrbitalEditor/assets/scenes/: Sandbox.oes
OrbitalEditor/assets/shaders/: Base.glsl  Base.glsl.frag
OrbitalEditor/assets/textures/: damier.xcf  icons.xcf
OrbitalEditor/src/: Clipboard.h  Constants.h  Editor.h  EditorApplication.cpp  EditorApplication.h  GuiLayer.h  Main.cpp  Tools.cpp  Tools.h  Widgets.h
OrbitalEditor/src/Scripts/: PlayerController.h
OrbitalEditor/src/Widgets/: AssetManagerPanel.cpp  AssetManagerPanel.h  BatchesPanel.cpp  BatchesPanel.h  FileExplorerPanel.cpp  FileExplorerPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  Inspector.cpp  Inspector.h  MetricsPanel.h  MetricsWindow.h  Toolbar.h  TreeNode.cpp  TreeNode.h  Viewport.cpp  Viewport.h  Widget.h
OrbitalEngine/: CMakeLists.txt  OrbitalEngine.vcxproj  OrbitalEngine.vcxproj.filters  cpp.hint
OrbitalEngine/assets/shaders/: Base.frag.glsl  Base.glsl  Base.vert.glsl  PostProcess.glsl
OrbitalEngine/include/OrbitalEngine/: Application.cpp  Application.h  Batch.h  BatchManager.h  Components.h  Constants.h  Context.h  Core.h  Events.h  Graphics.h  Layer.h  LayerStack.h  Logger.h  Logic.h  Mesh.h  MeshManager.h  Renderer.h  Shader.h  TestPublic.h  Time.h  Tools.h  Utils.h  Vertices.h  Window.h
OrbitalEngine/include/OrbitalEngine/Components/: Camera.h  Component.h  Hierarchy.h  Lights.h  MeshRenderer.h  NativeScript.h  NativeScriptManager.h  Tag.h  Transform.h  UUID.h  _NativeScriptManagerImp.h
OrbitalEngine/include/OrbitalEngine/Components/Scripts/: FirstPersonController.h  FreeCameraController.h
OrbitalEngine/include/OrbitalEngine/Events/: Events.h  KeyEvents.h  MainEvents.h  MouseEvents.h  WindowEvents.h
OrbitalEngine/include/OrbitalEngine/Graphics/: Batch.h  BatchManager.h  BufferUnit.h  BufferUnitManager.h  Camera.h  CameraController.h  DynamicBatch.h  DynamicBatchManager.h  FrameBuffer.h  IndexContainer.h  Material.h  MaterialManager.h  Mesh.h  MeshManager.h  MultisampledFrameBuffer.h  RenderCommands.h  Renderer.h  Shader.h  ShaderManager.h  Texture.h  TextureManager.h  Vertices.h  Window.h
OrbitalEngine/include/OrbitalEngine/Logic/: Application.h  ECS.h  Entity.h  Layer.h  LayerStack.h  NativeScript.h  NativeScriptManager.h  OE.h  RegistryManager.h  Scene.h  SceneManager.h  ScriptableEntity.h  Window.h  _EntityImp.h  _RegistryManagerImp.h
OrbitalEngine/include/OrbitalEngine/Utils/: Asset.h  AssetManager.h  Constants.h  Context.h  InputCodes.h  Inputs.h  KeyCodes.h  Logger.h  Metrics.h  Misc.h  Settings.h  Time.h
OrbitalEngine/src/: Application.cpp  Batch.cpp  BatchManager.cpp  BufferUnit.cpp  BufferUnitManager.cpp  Camera.cpp  CameraController.cpp  Context.cpp  DynamicBatch.cpp  DynamicBatchManager.cpp  ECS.cpp  Entity.cpp  Events.cpp  FirstPersonController.cpp  FrameBuffer.h  FreeCameraController.cpp  IndexBuffer.h  IndexContainer.cpp  Layer.cpp  LayerStack.cpp  Lights.cpp  Material.cpp  MaterialManager.cpp  Mesh.cpp  MeshManager.cpp  MeshRenderer.cpp  Metrics.cpp  NativeScriptManager.cpp  RegistryManager.cpp  Renderer.cpp  Scene.cpp  SceneManager.cpp  ShaderManager.cpp  TestPrivate.cpp  TestPrivate.h  TestPublic.cpp  TextureManager.cpp  VertexArray.h  VertexBuffer.h  Vertices.cpp
OrbitalEngine/src/Components/: Hierarchy.cpp
OrbitalEngine/src/Platform/OpenGL/: OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLMultisampledFrameBuffer.cpp  OpenGLMultisampledFrameBuffer.h  OpenGLRenderCommands.cpp  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  OpenGLWindow.cpp  OpenGLWindow.h  RenderCommands.cpp
OrbitalEngine/src/Platform/Windows/: W_Window.cpp  W_Window.h  WindowsInputs.cpp  WindowsInputs.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini
Sandbox/src/: GameApplication.h  GameLayer.h  Sandbox.cpp
lib/: OrbitalEditorNV.exp
